--- a/Clase2.html
+++ b/Clase2.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <title>Crear_contrasena</title>
+    <title>Document</title>
     <style>
         :root{
             --white:#ffff;
@@ -32,6 +32,7 @@
             display: grid;
             grid-template-rows: auto 1fr auto;
             width: 300px;
+            justify-items: center;
         }
         .logo{
             width: 150px;
@@ -52,24 +53,28 @@
             margin-bottom: 32px;
             text-align: center;
         }
-        .form{
-            display: flex;
-            flex-direction: column;
-
-        }
-        .label {
-            font-size: var(--sm);
-            font-weight: bold;
-            margin-bottom: 4px;
-        }
-        .input-password {
+        .email-image{
+            width: 132px;
+            height: 132px;
+            border-radius: 50%;
             background-color: var(--text-input-field);
-            border: none;
-            border-radius: 8px;
-            height: 32px;
-            font-size: var(--md);
-            padding: 6px;
-            margin-bottom: 12px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 24px;
+        }
+        .email-image img{
+            width: 80px;
+        }
+        .resend{
+            font-size: var(--sm);
+        }
+        .resend span {
+            color: var(--very-light-pink);
+        }
+        .resend a {
+            color: var(--hospital-green);
+            text-decoration: none;
         }
         .primary-button{
             background-color: var(--hospital-green);
@@ -99,20 +104,19 @@
             <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
 
             <h1 class="tittle">
-                Crear nueva contraseña
+                El correo electrónico ha sido enviado
             </h1>
             <p class="subtittle">
-                Ingresa tu nueva contraseña para tu cuenta
+                Por favor revise su bandeja de entrada para obtener instrucciones sobre cómo restablecer la contraseña.
             </p>
-            <form action="#" class="form">
-                <label for="password" class="label">Contraseña</label>
-                <input type="password" id="password" placeholder="*******" class="input-password">
-
-                <label for="new-password" class="label">Contraseña</label>
-                <input type="password" id="new-password" placeholder="*******" class="input-password">
-
-                <input type="submit" value="Confirmar" class="primary-button login-button">
-            </form>
+            <div class="email-image">
+                <img src="./icons/email.svg" alt="email">
+            </div>
+            <button class="primary-button login-button">Ingresar</button>
+            <p class="resend">
+                <span>No recibiste el correo electronico?</span>
+                <a href="#">Reenviar</a>
+            </p>
         </div>
     </div>
 </body>
