--- a/Clase6.html
+++ b/Clase6.html
@@ -22,254 +22,221 @@
             margin: 0;
             font-family:  "Quicksand", sans-serif;
         }
-       
+       .cards-container {
+            display: grid;
+            grid-template-columns: repeat (auto-fill, 240px);
+            gap: 26px;
+       }
+       .product-card {
+        width: 240px;
+       }
+       .product-card img {
+        width: 240px;
+        height: 240px;
+        border-radius: 20px;
+        object-fit: cover;
+       }
+       .product-info{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+       }
+       .product-info figure {
+        margin: 0;
+       }
+       .product-info figure img {
+        width: 35px;
+        height: 35px;
+       }
+       @media (max-width: 640px) {
+        .cards-container
+       }
     </style>
 </head>
 <body>
     <section class="main-container">
         <div class="cards-container">
             <div class="product-card">
-                <img src="" alt="">
-                <div>
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
                     <p>$120,00</p>
                     <p>$Bicicleta</p>
-                </div>
-                <div>
+                    </div> 
                     <figure>
                         <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
+                    </figure>  
+                </div>    
             </div>
+        </div>  
+        <div class="cards-container">
             <div class="product-card">
-                <img src="" alt="">
-                <div>
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
                     <p>$120,00</p>
                     <p>$Bicicleta</p>
-                </div>
-                <div>
+                    </div> 
                     <figure>
                         <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div>
-            <div class="product-card">
-                <img src="" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>$Bicicleta</p>
-                </div>
-                <div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
+                    </figure>  
+                </div>    
             </div>
         </div>
-
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div>
+        <div class="cards-container">
+            <div class="product-card">
+                <img src="./imagen/bici.jpg" alt="">
+                <div class="product-info">
+                    <div>
+                    <p>$120,00</p>
+                    <p>$Bicicleta</p>
+                    </div> 
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>  
+                </div>    
+            </div>
+        </div> 
     </section>
 </body>
 </html>
